# SAD

./: .gitignore  LICENSE  README.md  build.sh  index.html  install.sh  render.sh  run.sh  training_config.json
backends/: README.md
backends/cuda/: CMakeLists.txt  README.md  build.sh
backends/cuda/src/: adam.cu  candidate_pack.cu  densify_prune.cu  gradients.cu  jfa.cu  radix_sort.cu  render.cu  sad_common.cuh  sad_cuda.cu  tau_diffusion.cu  utils.cu
backends/metal/: README.md  build.sh
backends/metal/shaders/: radix_sort.metal  sad.metal  sad_common.metal  viewer.metal
backends/metal/shaders/encoders/: adam_encoder.metal  candidate_pack_encoder.metal  candidates_encoder.metal  clear_encoder.metal  compact_candidates_encoder.metal  densify_encoder.metal  hilbert_encoder.metal  init_sites_encoder.metal  jfa_encoder.metal  packed_candidates_encoder.metal  packed_jfa_encoder.metal  packed_render_encoder.metal  prune_encoder.metal  psnr_encoder.metal  render_encoder.metal  ssim_encoder.metal  tau_diffusion_encoder.metal  tiled_gradient_encoder.metal
backends/metal/sources/: main.swift
backends/metal/sources/encoders/: adam_encoder.swift  candidate_pack_encoder.swift  clear_encoder.swift  compact_candidates_encoder.swift  densify_encoder.swift  hilbert_encoder.swift  init_sites_encoder.swift  jfa_encoder.swift  packed_candidates_encoder.swift  packed_jfa_encoder.swift  packed_render_encoder.swift  prune_encoder.swift  psnr_encoder.swift  radix_sort_simple.swift  render_encoder.swift  ssim_encoder.swift  tau_diffusion_encoder.swift  tiled_gradient_encoder.swift
backends/metal/sources/rendering/: packed_renderer.swift  renderer.swift
backends/metal/sources/training/: training.swift  training_init.swift  training_report.swift  training_setup.swift  training_types.swift
backends/metal/sources/utils/: candidate_field.swift  cli.swift  config_loader.swift  hilbert.swift  hilbert_resources.swift  image_io.swift  metal_library.swift  packed_candidates.swift  packed_inference.swift  sad_types.swift  sites_io.swift  viewer.swift
backends/metal/tests/: check_artifacts.swift  test_jump_schedule.swift  test_sort.swift  verify_psnr.swift
backends/pytorch/: README.md  __init__.py  build_ext.sh  modules.py  requirements.txt  train.py
backends/pytorch/examples/: autograd_demo.py
backends/pytorch/torch_ext/: CMakeLists.txt  setup.py  torch_binding.cpp  torch_binding.h
backends/pytorch/torch_ext/cmake/: compile-metal.cmake  metallib_to_header.py  utils.cmake
backends/pytorch/torch_ext/cuda/: sad_bindings.cu
backends/pytorch/torch_ext/metal/: sad_bindings.mm  torch_sad.metal
backends/pytorch/torch_ext/sad_ops/: __init__.py
backends/shared/: README.md  gen_shaders_js.py  sad_shared.wgsl
backends/shared/wgsl/: adam.wgsl  candidate_pack.wgsl  clear_buffer_i32.wgsl  clear_buffer_u32.wgsl  gradients_tiled.wgsl  hilbert.wgsl  init_cand.wgsl  init_gradient.wgsl  jfa_clear.wgsl  jfa_flood.wgsl  prune.wgsl  radix_sort.wgsl  render_compute.wgsl  score_pairs_densify.wgsl  score_pairs_prune.wgsl  seed_cand.wgsl  split.wgsl  stats.wgsl  tau_diffuse.wgsl  tau_extract.wgsl  tau_writeback.wgsl  vpt.wgsl  write_indices.wgsl
backends/webgpu_js/: README.md  bench.html  index.html  main.js  shaders.js  style.css  train.html  train.js
backends/webgpu_js/src/: buffers.js  encoders.js  io.js  params.js  radix_sort.js  shader_loader.js  textures.js  trainer.js  wgsl_overrides.js
backends/webgpu_py/: README.md  encoders.py  radix_sort.py  requirements.txt  sad_shaders.py  sad_shared.py  train_wgpu.py
static/: style.css
